# game.nestopia

./: .travis.yml  CMakeLists.txt  FindMinGW.cmake  README.md  Readme.md  appveyor.yml
depends/common/nestopia/: CMakeLists.txt  nestopia.txt
game.libretro.nestopia/: addon.xml  addon.xml.in  buttonmap.xml
game.libretro.nestopia/resources/: buttonmap.xml  settings.xml
game.libretro.nestopia/resources/language/English/: strings.po
game.nestopia/: addon.xml
game.nestopia/resources/: settings.xml
game.nestopia/resources/language/English/: strings.po
